fix: dark mode for source code link

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 .footer__link {
-  color: black;
+  color: light-dark(black, white);
 }
 
 .table {
